<?xml version="1.0" encoding="utf-8"?>
<!-- Fragment om een gebruiker te laten aanmelden -->
<android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_login"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:ignore="Autofill"
>

    <!-- Virtuele scheidingslijn op 50% horizontaal -->
    <android.support.constraint.Guideline
            android:id="@+id/guideline_login_50percent_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
    />

    <!-- Virtuele scheidingslijn op 10% verticaal -->
    <android.support.constraint.Guideline
            android:id="@+id/guideline_login_10percent_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"
    />

    <!-- Virtuele scheidingslijn op 90% verticaal -->
    <android.support.constraint.Guideline
            android:id="@+id/guideline_login_90percent_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90"
    />

    <!-- Logo -->
    <ImageView
            android:id="@+id/image_login_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="WH,550:163"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/img_logo"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/alt_logo"

            app:layout_constraintEnd_toStartOf="@+id/guideline_login_90percent_vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline_login_10percent_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_login_50percent_horizontal"
    />

    <!-- scrollView indien scherm te klein je toch nog kan scrollen -->
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintEnd_toStartOf="@+id/guideline_login_90percent_vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline_login_10percent_vertical"
            app:layout_constraintTop_toBottomOf="@id/guideline_login_50percent_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
    >

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingBottom="10dp"
        >


            <!-- Gebruikersnaam -->
            <EditText
                    android:id="@+id/text_login_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:hint="@string/placeholder_username_or_email"
                    android:inputType="text"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <!-- Wachtwoord -->
            <EditText
                    android:id="@+id/text_login_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:hint="@string/placeholder_password"
                    android:inputType="textPassword"

                    app:layout_constraintTop_toBottomOf="@+id/text_login_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:layout_marginTop="8dp"
            />

            <!-- Log in knop -->
            <Button
                    android:id="@+id/button_login_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/txt_login"

                    app:layout_constraintTop_toBottomOf="@+id/text_login_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:layout_marginTop="12dp"
            />

            <!-- Ga naar registratie link -->
            <TextView
                    android:id="@+id/button_login_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/txt_login_register"
                    android:textAlignment="center"

                    app:layout_constraintTop_toBottomOf="@+id/button_login_confirm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:layout_marginTop="12dp"
            />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>