<?xml version="1.0" encoding="utf-8"?>
<!-- Een fragment voor een lijst van meetings weer te geven (single pane) -->
<android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_meeting_list"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
>

    <!-- Swipe to refresh voor lijst -->
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_meeting_list"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >

        <!-- De lijst van meetings -->
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_meeting_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:listitem="@layout/item_meeting_small"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.constraint.ConstraintLayout>