...
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/text_account_username"

                        android:layout_marginBottom="8dp"
                />

                <!-- Gebruikersnaam -->
                <TextView
...
